Creación de dto mapped para listas en productos. Service, dto request, response y controller de producto acomodado para mapped